Fixed spacing bug for back and next buttons

--- a/frontend/src/components/donor/DonorScheduleDropoffPickupPage/DonorSchedulePickUp.css
+++ b/frontend/src/components/donor/DonorScheduleDropoffPickupPage/DonorSchedulePickUp.css
@@ -37,6 +37,7 @@
 #donPickupButtons {
   margin: 50px 0;
   display: flex;
+  justify-content: space-between;
 }
 
 .fc h2 {
